<resources>
    <string name="app_name">My Virtual Personal Trainer</string>
    <string name="sing_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <!-- Strings used for user params -->
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_birth_date">Birth date</string>
    <string name="user_email">Email</string>
    <string name="user_pass">Password</string>
    <string name="user_cpass">Confirm password</string>
    <string name="user_weight">Weight</string>
    <string name="user_height">Height</string>
    <string name="user_activity">Activity level</string>

    <!-- Strings activity level -->
    <string name="sedentary">Sedentary</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="moderately_active">Moderately Active</string>
    <string name="very_active">Very Active</string>
    <string name="extra_active">Extra Active</string>

    <!-- Strings for errors -->
    <string name="invalid_pass">Password cannot be empty</string>
    <string name="weak_pass">Password must contain: At least 8 characters, upper case and lower case, numbers and at least one sign</string>
    <string name="invalid_email">Email cannot be empty</string>
    <string name="invalid_format_email">The email format isn\'t correct</string>
    <string name="invalid_name">Name cannot be empty</string>
    <string name="invalid_surname">Surname cannot be empty</string>
    <string name="invalid_birth_date">Birth date cannot be empty</string>
    <string name="invalid_format_birth_date">Birth date must be formatted as dd/mm/yyyy</string>
    <string name="pass_dont_match">Passwords don\'t match</string>
    <string name="invalid_height">Height cannot be empty</string>
    <string name="invalid_format_height">Height must be a decimal between 0 and 3 meters</string>
    <string name="invalid_weight">Weight cannot be empty</string>
    <string name="invalid_format_weight">Weight must be a decimal between 0 and 300 kg</string>


    <!-- Strings used for welcome layout -->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_sing_in">Do you already have an account?</string>
    <string name="welcome_sign_in_p">Get back to your training now!</string>
    <string name="welcome_sing_up">Don\'t have an account yet?</string>
    <string name="welcome_sign_up_p">Start training right now!</string>
    <string name="pet1_text">" Hello! I'm Volt, the smartest personal trainer on Earth"</string>

    <!-- Strings used for sign up layout -->
    <string name="sign_in_title">Sign in now!</string>
    <string name="sign_in_p">If you prefer, you can also log in with the following services</string>
    <string name="sign_in_google">Sign in with Google</string>

    <!-- Strings used for sign up layout -->
    <string name="sign_up_title">Sign up now!</string>

    <!-- Strings for image description -->
    <string name="logo_description" translatable="false">App pet and title</string>
    <string name="pet_description" translatable="false">App pet</string>
</resources>