<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carvilgar.myvirtualpersonaltrainer.welcome.MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tittle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:gravity="center"
            android:text="@string/welcome_sing_in"
            android:textColor="@color/text_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_sign_in_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:gravity="center"
            android:text="@string/welcome_sign_in_p"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/welcome_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/text_color"
            android:text="@string/sign_in"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/welcome_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:gravity="center"
            android:text="@string/welcome_sing_up"
            android:textColor="@color/text_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_sign_up_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:gravity="center"
            android:text="@string/welcome_sign_up_p"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/welcome_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/text_color"
            android:text="@string/sing_up"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/pet1"
            android:layout_width="200dp"
            android:layout_height="255dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/pet1" />

        <TextView
            android:id="@+id/pet1_text"
            android:layout_width="163dp"
            android:layout_height="53dp"
            android:layout_weight="0"
            android:text="@string/pet1_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>